# hotdata-llamaindex

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: llamaindex_basic.py  llamaindex_managed_db.py
hotdata_llamaindex/: __init__.py  databases.py  tools.py
tests/: conftest.py  test_package.py  test_tools.py
