[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hotdata-llamaindex"
version = "0.1.0"
description = "LlamaIndex tools for Hotdata runtime"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "hotdata-runtime>=0.2.3",
  "hotdata>=0.2.5",
  "llama-index-core>=0.12.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["hotdata_llamaindex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
